<resources>
    <string name="app_name">Crutra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="slogan"><![CDATA[Changing Recruitment & Development]]></string>
    <string name="copyright">© 2018 Rhics Technology</string>
    <string name="enterUserName">Please Enter email or Username</string>
    <string name="enterPassword">Please Enter your Password</string>
    <string name="login">Login</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="register">New here? Register</string>
    <string name="enterConfirmPassword">Confirm Password</string>
    <string name="registerbtn">Register</string>
    <string name="aleready">Already Registered!</string>
    <string name="loginHere">Login Here</string>
    <string name="applicant">Applicant</string>
    <string name="company">Company</string>
    <string name="facebook_app_id">1376975605745818</string>
    <string name="fb_login_protocol_scheme">fb1376975605745818</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="invalidPasswprd">Invalid Password</string>
    <string name="passwordDontmatch">Password Does not match!</string>
    <string name="pleasewait">Please wait..</string>
    <string name="nointernate">No internet connection</string>
    <string name="errorHappen">There was an error, Try again</string>
    <string name="alreadyRegistered">Your Email is already Registered</string>
    <string name="complete">Completed</string>
    <string name="Registeredcomplete">Registration complete</string>
    <string name="loginnow">Login</string>
    <string name="canceled">Canceled</string>
    <string name="registerFirster">This Email is nnot Registered yet</string>
    <string name="invalidLogin">Invalid Login Details</string>
    <string name="title_activity_company_main">CompanyMainActivity</string>
    <string name="resetPasswordUrl">http://217.199.187.196/sbncbic.com/auth/reset-password</string>
    <string name="jobsapplied">Jobs Applied: </string>
    <string name="shotlisted">Shotlisted</string>
    <string name="interviews">Interviews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jobTitle">Job Title</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="summary">Summary</string>
    <string name="country">Country</string>
    <string name="deadline">Deadline</string>
    <string name="submit">Submit</string>
    <string name="insutries">Industry</string>
    <string name="packages">Packages</string>
    <string name="selectPackages">Select packages</string>
    <string name="price">Price</string>
    <string name="jobVol">Job Volume</string>
    <string name="paynow">Pay Now</string>
    <string name="invalidCardDetails">Invalid Card Details</string>
    <string name="success">Success</string>
    <string name="paymentSuccess">Payment was Successful and Your account has been updated</string>
    <string name="continu">Continue</string>
    <string name="paymentSuccessWithError">Payment Was successfull but your account was not update, please contact support for details</string>
    <string name="contactSupport">Contact Support</string>
    <string name="jobPosted">Job was Posted Successfully</string>
    <string name="postAgain">Post a New Job</string>
    <string name="trasactionError">There was an error proccessing your transaction please try again</string>
    <string name="lorem">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia</string>
    <string name="NoJobsAvailable">No Jobs Available</string>
    <string name="nojobAv">No Jobs Available</string>
    <string name="apply">Apply</string>
    <string name="companyName">Company Name</string>
    <string name="cityName">City</string>
    <string name="address">Address</string>
    <string name="updateProfile">Update Profile</string>
    <string name="phone">Phone</string>
    <string name="profilePic">Profile Picture</string>
    <string name="coverPic">Cover Picture</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="selectImage">Select Image</string>
    <string name="album">Albums</string>
    <string name="galery">Galleries</string>
    <string name="limitSelection">You have reached selection limit</string>
    <string name="postJob">Post Job</string>
    <string name="payment">Payment</string>
    <string name="Profile">Profile</string>
    <string name="thisfield">This Field is needed</string>
    <string name="profileUpdated">Profile Updated Successfully</string>
    <string name="headline">Headline</string>
    <string name="skip">Skip</string>
    <string name="upload">Record Video</string>
    <string name="uploadFromSys">Upload</string>
    <string name="selectFromAcc">Select from profile</string>
    <string name="editVids">Edit Video</string>
    <string name="vidtitle">Video Title</string>
    <string name="vidprivate">Private</string>
    <string name="vidpublic">Public</string>
    <string name="uplonBtn">Upload</string>
    <string name="videoStatus">Publish Status</string>
    <string name="tryagian">Try again</string>
    <string name="error">Error</string>
    <string name="uploading">Uploading...</string>
    <string name="sendingApplication">Sending application...</string>
    <string name="applicationSent">Application Sent</string>
    <string name="applied">Applied</string>
    <string name="alreadyApplied">You\'ve already applied to this Job</string>
    <string name="applications">applications.</string>
    <string name="fetchingUrJobs">Fetching your jobs..</string>
    <string name="youHaveNoJobs">You have no jobs</string>
    <string name="noapplication">No Applicatioon on this job yet</string>
    <string name="shotlist">Shortlist</string>
    <string name="message">Message</string>
    <string name="decline">Decline</string>
    <string name="scheduleinterview">Schedule Interview</string>
    <string name="applicantVidoe">Applicant Video</string>
    <string name="dialog_positive_button">Return</string>
    <string name="mapview">View map</string>
    <string name="listJob">List Jobs</string>
    <string name="work">Work</string>
    <string name="letStart">LET\'S START</string>
    <string name="recruit">Recruit</string>
    <string name="instant">Instant</string>
    <string name="response">Response</string>
    <string name="compress">Compressing..</string>
    <string name="prepareing">Preparing..</string>
    <string name="applyNow">APPLY NOW</string>
    <string name="uploadYoutube">Upload from Youtube</string>
    <string name="searchApp">Search Crutra App</string>
    <string name="jobs">JOBS</string>
    <string name="training">TRAINING</string>
    <string name="jobCategories">JOB CATEGORIES</string>
    <string name="tapcategories">Tap to select up to 5 Job Categories</string>
    <string name="salaryRange">SALARY RANGE</string>
    <string name="permonth">PER MONTH</string>
    <string name="maxfiveSelected">You can only select 5 Categories</string>
    <string name="hudreddollars">$100</string>
    <string name="lastThouand">$5000</string>
    <string name="viewandapply"><![CDATA[VIEW MORE & APPLY]]></string>
    <string name="parmanent">PERMANENT</string>
    <string name="search">SEARCH</string>
    <string name="contract">CONTRACT</string>
    <string name="fulltime">FULL TIME</string>
    <string name="parttime">PART-TIME</string>
    <string name="textOn">On</string>
    <string name="textOff">Off</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confrim</string>
    <string name="areUsuretoDelete">Are you sure you want to delete it?</string>
    <string name="Marketing">Marketing</string>
    <string name="trainingCategories">TRAINING CATEGORIES</string>
    <string name="edit">EDIT</string>
    <string name="notifications">Notifications</string>
    <string name="genral">General</string>
    <string name="accounts">Accounts</string>
    <string name="privacy">Privacy</string>
    <string name="block">Block</string>
    <string name="help">Help</string>
    <string name="saveChanges">SAVE CHANGES</string>
    <string name="empdashboard">EMAPLOYER DASHBOARD</string>
    <string name="postjob1">POST JOB</string>
    <string name="candidates">CANDIDATES</string>
    <string name="myjobs">MY JOBS</string>
    <string name="favorites">FAVOURITES</string>
    <string name="messages">MESSAGES</string>
    <string name="interview">INTERVIEWS</string>
    <string name="shotlistS">SHORTLISTS</string>
    <string name="reports">REPORTS</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="settings">SETTINGS</string>
    <string name="save">SAVE</string>
    <string name="applys">APPLY</string>
    <string name="workexperience">WORK EXPERIENCE</string>
    <string name="education">EDUCATION</string>
    <string name="selectVideo">Select Video</string>
    <string name="vidPitches">VIDEO PITCHES</string>
    <string name="select">SELECT</string>
    <string name="applicationNotificatio">APPLICATION NOTIFICATIONS</string>
    <string name="messageNotification">MESSAGE NOTTICATIONS</string>
    <string name="soundNotification">SOUND NOTIFICATIONS</string>
    <string name="interviewNotification">INTERVIEW NOTIFICATIONS</string>
    <string name="ivibrateNotification">VIBRATION</string>
    <string name="changeAcount">Change Account Information</string>
    <string name="email">EMAIL</string>
    <string name="oldpassword">OLD PASSWORD</string>
    <string name="newpassword">NEW PASSWORD</string>
    <string name="repeat">REPEAT</string>
    <string name="update">UPDATE</string>
    <string name="saySomething">Say something</string>
    <string name="you">You</string>
    <string name="alereadyshotlisted">Already Shortlisted</string>
    <string name="joblisted">Job Listed</string>
    <string name="interviewWith">Interview with</string>
    <string name="location">LOCATION</string>
    <string name="enterInterviewLocation">Enter interview address</string>
    <string name="invalidLocation">Invalid Location enterd</string>
    <string name="submitInterview">Submiting request to applicant \n Please wait...</string>
    <string name="jobDesc">Job description</string>
    <string name="uploadBackgroundImage">Upload background image</string>
    <string name="FilterResult">Filter Jobs</string>
    <string name="buycredit">Buy Credits</string>
    <string name="addfav">Add Favourite</string>
    <string name="sharetoAll">Share to all</string>
    <string name="dontShowjob">Don\'t show jobs like this</string>
    <string name="Showjob">Show jobs like this</string>
    <string name="skills">Skills</string>
    <string name="portfolio">Portfolio</string>
    <string name="experience">Expereince</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="desc">Description</string>
    <string name="universityCollege">University / College</string>
    <string name="gradYear">Graduate Year</string>
    <string name="degree">Degree</string>
    <string name="title">Title</string>
    <string name="completedDate">Completed Date</string>
    <string name="url">Project Url</string>
    <string name="requirements">Requirements</string>
    <string name="addEducation">Add Education</string>
    <string name="addskills">Add Skills</string>
    <string name="addExperience">Add Experience</string>
    <string name="addPortfolio">Add Portfolio</string>
</resources>