<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/bottom_one"
        android:padding="@dimen/activity_vertical_margin"
        android:textSize="14sp"
        android:layout_marginBottom="5dp"
        android:id="@+id/title"
        android:hint="@string/title"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/bottom_one"
        android:padding="@dimen/activity_vertical_margin"
        android:textSize="14sp"
        android:id="@+id/copletedDate"
        android:hint="@string/completedDate"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/bottom_one"
        android:padding="@dimen/activity_vertical_margin"
        android:textSize="14sp"
        android:layout_marginBottom="5dp"
        android:id="@+id/url"
        android:hint="@string/url"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textDefault"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:textSize="16sp"/>

</LinearLayout>