<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/bottom_one"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_marginBottom="5dp"
        android:id="@+id/school"
        android:textColor="@android:color/black"
        android:hint="@string/universityCollege"
        android:textSize="14sp"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/bottom_one"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_marginBottom="5dp"
        android:id="@+id/gradYear"
        android:textColor="@android:color/black"
        android:hint="@string/gradYear"
        android:textSize="14sp"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/bottom_one"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_marginBottom="5dp"
        android:id="@+id/degree"
        android:textColor="@android:color/black"
        android:hint="@string/degree"
        android:textSize="14sp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@color/textDefault"
        />

</LinearLayout>