<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rhicstech.crutra.crutra.Profile.SettingsUi.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/textDefault"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:text="@string/changeAcount"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_marginBottom="@dimen/activity_vertical_margin"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/email"
                   android:id="@+id/emailText"
                   android:layout_centerVertical="true"
                   android:textStyle="bold"
                   android:textColor="@color/textDefault"
                   />

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="10dp"
                   android:background="@drawable/bottom_one"
                   android:layout_toRightOf="@+id/emailText"/>

           </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"

                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oldpassword"
                    android:id="@+id/passwordText"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textColor="@color/textDefault"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/bottom_one"
                    android:layout_toRightOf="@+id/passwordText"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newpassword"
                    android:id="@+id/passwordText2"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textColor="@color/textDefault"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/bottom_one"
                    android:layout_toRightOf="@+id/passwordText2"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat"
                    android:id="@+id/repeat"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textColor="@color/textDefault"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/bottom_one"
                    android:layout_toRightOf="@+id/repeat"/>

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/textDefault"
                android:text="@string/update"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
